...
        AicaaFilledButton(
            onClick = onCapture,
            enabled = !signingOut,
            modifier =
            Modifier
                .fillMaxWidth()
                .testTag("capture_entry_button")
        ) {
            Text(text = stringResource(R.string.capture_entry))
        }
        AicaaTextButton(
            onClick = onGmail,
            enabled = !signingOut,
            modifier =
            Modifier
                .fillMaxWidth()
                .testTag("gmail_entry_button")
        ) {
            Text(text = stringResource(R.string.gmail_entry))
        }
        AicaaTextButton(
            onClick = onMessages,
            enabled = !signingOut,
            modifier =
            Modifier
                .fillMaxWidth()
                .testTag("messages_entry_button")
        ) {
            Text(text = stringResource(R.string.messages_entry))
        }
        AicaaTextButton(
            onClick = onTasks,
            enabled = !signingOut,
...
