...
    AicaaFilledButton(
        onClick = onReview,
        enabled = state.canReview || state.canRetryReview,
        modifier =
        Modifier
            .fillMaxWidth()
            .testTag("gmail_review_button")
    ) {
        Text(
            text =
            if (state.reviewing) {
                stringResource(R.string.gmail_reviewing)
            } else if (state.canRetryReview) {
...
